added list view for new and conference speakers

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="textColor">#ECE5EC</color>
     <color name="pinkColor">#008175</color>
     <color name="tansparentColor">#00FFFFFF</color>
+    <color name="listColor">#EEE4E4</color>
 </resources>
