--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,7 +17,6 @@
         android:textColor="@color/pinkColor"
         android:textSize="30sp"
         android:textStyle="bold|normal" />
-
     <androidx.cardview.widget.CardView
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp"
@@ -28,6 +27,9 @@
         app:cardUseCompatPadding="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -335,15 +337,8 @@
                     android:layout_margin="10dp"
                     android:layout_width="35dp"
                     android:layout_height="35dp"/>
-
-
             </LinearLayout>
-
-
         </LinearLayout>
-
-
-
+        </ScrollView>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
