--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.ntobeko.confmanagement.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:name="com.ntobeko.confmanagement.ui.postnewsarticle.PostNewsArticleFragment"
+        android:label="@string/menu_postnewsarticle"
+        tools:layout="@layout/fragment_postnewsarticle" />
 </navigation>
