--- a/app/src/main/res/layout/fragment_conferences.xml
+++ b/app/src/main/res/layout/fragment_conferences.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.conferences.ConferencesFragment">
+    tools:context=".ui.conferences.ConferencesFragment">
 
     <ListView
         android:layout_width="match_parent"
