--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,15 +7,15 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.ntobeko.confmanagement.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:name="com.ntobeko.confmanagement.ui.approvals.ApprovalsFragment"
+        android:label="@string/menu_approval"
+        tools:layout="@layout/fragment_approvals" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.ntobeko.confmanagement.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:name="com.ntobeko.confmanagement.ui.register.RegisterFragment"
+        android:label="@string/menu_register"
+        tools:layout="@layout/fragment_register" />
 
     <fragment
         android:id="@+id/nav_slideshow"
