--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="pinkColor">#008175</color>
     <color name="tansparentColor">#00FFFFFF</color>
     <color name="listColor">#F6F3F3</color>
+    <color name="red">#FF0303</color>
+    <color name="green">#07A810</color>
 </resources>
