--- a/app/src/main/res/layout/conferences_list_view.xml
+++ b/app/src/main/res/layout/conferences_list_view.xml
@@ -7,8 +7,8 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        app:cardElevation="5dp"
-        app:cardCornerRadius="18dp"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="10dp"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,7 +23,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="8dp"
-                android:src="@drawable/ic_facebook"
+                android:src="@mipmap/ic_launcher"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/black"
                 android:layout_marginTop="16dp"
