--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -42,6 +42,7 @@
                         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                             android:id="@+id/conferenceId"
                             android:ems="10"
+                            android:textSize="13sp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/select_associated_conference"/>
@@ -51,7 +52,7 @@
                         android:hint="@string/research_proposal_title"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         app:shapeAppearanceOverlay="@style/Button4"
                         app:hintTextColor="#4E4A4A"
                         app:boxStrokeColor="#4E4A4A"
@@ -65,7 +66,6 @@
                             android:id="@+id/researchTopic"
                             android:ems="10"
                             android:textSize="13sp"
-                            android:textColor="@color/black"
                             android:textStyle="normal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -73,10 +73,28 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="10dp"
+                        app:shapeAppearanceOverlay="@style/Button4"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                            android:id="@+id/theme"
+                            android:ems="10"
+                            android:textSize="13sp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/select_conference_theme"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:hint="@string/type_research_abstract_here"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginTop="10dp"
                         app:shapeAppearanceOverlay="@style/Button4"
                         app:hintTextColor="#4E4A4A"
                         app:boxStrokeColor="#4E4A4A"
@@ -90,7 +108,6 @@
                             android:id="@+id/abstractBody"
                             android:ems="10"
                             android:textSize="13sp"
-                            android:textColor="@color/black"
                             android:textStyle="normal"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
