--- a/app/src/main/res/layout/conferences_list_view.xml
+++ b/app/src/main/res/layout/conferences_list_view.xml
@@ -30,7 +30,7 @@
                 tools:ignore="ContentDescription" />
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
@@ -38,15 +38,6 @@
                 android:text="@string/app_name"
                 android:textSize="16sp"
                 android:textStyle="bold" />
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/app_name"
-                android:layout_marginStart="130dp"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
         </LinearLayout>
 
         <LinearLayout
@@ -54,24 +45,24 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="70dp"
             android:textSize="16sp"
             android:textStyle="bold"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txt_offer"
+                android:id="@+id/theme"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="3dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:textStyle="bold"
                 android:paddingBottom="16dp"
                 android:textSize="16sp"
                 android:text="@string/app_name"
-                />
+                tools:ignore="RtlHardcoded" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,23 +70,76 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="110dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/description"
+                android:id="@+id/venue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:lineSpacingExtra="3dp"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
+                android:gravity="left"
+                android:textStyle="bold"
                 android:paddingBottom="16dp"
+                android:textSize="16sp"
                 android:text="@string/app_name"
-                android:textSize="16sp" />
+                tools:ignore="RtlHardcoded" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="150dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="3dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:paddingBottom="16dp"
+                android:textSize="16sp"
+                android:text="@string/app_name"
+                tools:ignore="RtlHardcoded" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="190dp"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/createdDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="3dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:gravity="left"
+                android:textStyle="bold"
+                android:paddingBottom="16dp"
+                android:textSize="16sp"
+                android:text="@string/app_name"
+                tools:ignore="RtlHardcoded" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
