--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,17 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_baseline_post_add_24"
             android:title="@string/menu_post_news_article" />
+        <item
+            android:id="@+id/nav_addconf"
+            android:icon="@drawable/ic_baseline_add_24"
+            android:title="@string/create_conference" />
+        <item
+            android:id="@+id/nav_authnews"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/title_news" />
+        <item
+            android:id="@+id/nav_conferences"
+            android:icon="@drawable/ic_notifications_black_24dp"
+            android:title="@string/title_conferences" />
     </group>
 </menu>
