--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="listColor">#F6F3F3</color>
     <color name="red">#FF0303</color>
     <color name="green">#07A810</color>
+    <color name="grey">#B1AEAE</color>
 </resources>
