--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -41,4 +41,14 @@
         android:label="@string/title_conferences"
         tools:layout="@layout/fragment_conferences" />
 
+    <fragment
+        android:id="@+id/nav_approved"
+        android:name="com.ntobeko.confmanagement.ui.approvals.ApprovalsFragment"
+        android:label="@string/menu_approval"
+        tools:layout="@layout/fragment_approvals" />
+    <fragment
+        android:id="@+id/nav_rejected"
+        android:name="com.ntobeko.confmanagement.ui.approvals.ApprovalsFragment"
+        android:label="@string/menu_approval"
+        tools:layout="@layout/fragment_approvals" />
 </navigation>
