--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation2"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_conferences">
+
+    <fragment
+        android:id="@+id/nav_conferences"
+        android:name="com.ntobeko.confmanagement.ui.conferences.ConferencesFragment"
+        android:label="@string/title_conferences"
+        tools:layout="@layout/fragment_conferences" />
 
     <fragment
         android:id="@+id/nav_home"
@@ -34,12 +40,6 @@
         android:name="com.ntobeko.confmanagement.ui.authnews.AuthNewsFragment"
         android:label="@string/title_news"
         tools:layout="@layout/fragment_authnews" />
-
-    <fragment
-        android:id="@+id/nav_conferences"
-        android:name="com.ntobeko.confmanagement.ui.conferences.ConferencesFragment"
-        android:label="@string/title_conferences"
-        tools:layout="@layout/fragment_conferences" />
 
     <fragment
         android:id="@+id/nav_approved"
