--- a/app/src/main/res/layout/news_list_view.xml
+++ b/app/src/main/res/layout/news_list_view.xml
@@ -33,20 +33,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:maxWidth="170dp"
-                android:minWidth="170dp"
                 android:layout_marginTop="24dp"
                 android:text="@string/title_news"
                 android:textColor="@color/green"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="145dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="100dp"
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:text="_1h_ago"
-                android:layout_marginStart="0dp"
                 android:textColor="@color/grey"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
@@ -55,9 +60,10 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="20dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="140dp"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <TextView
