pdf support fix

--- a/app/src/main/res/layout/approvals_list_view.xml
+++ b/app/src/main/res/layout/approvals_list_view.xml
@@ -99,6 +99,15 @@
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     />
+                <TextView
+                    android:id="@+id/hiddenAbstractPdfDownloadUrl"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text=""
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary"
+                    />
 
             </LinearLayout>
 
