--- a/app/src/main/res/layout/approvals_list_view.xml
+++ b/app/src/main/res/layout/approvals_list_view.xml
@@ -81,17 +81,39 @@
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary"
                     />
-
-                <Button
-                    android:id="@+id/openAbstractPdf"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/open_pdf"
-                    android:textSize="12sp"
-                    />
+                    android:layout_margin="8dp"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/openAbstractPdf"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/open_pdf"
+                        android:textSize="12sp"/>
+
+                    <Button
+                        android:id="@+id/openProofOfPayment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="60dp"
+                        android:text="@string/open_proof_of_payment"
+                        android:textSize="12sp"/>
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/hiddenId"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text=""
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary"
+                    />
+                <TextView
+                    android:id="@+id/downloadProofOfPaymentUrl"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginTop="0dp"
