start from registrations awaiting approval

--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation2"
-    app:startDestination="@+id/nav_conferences">
-
-    <fragment
-        android:id="@+id/nav_conferences"
-        android:name="com.ntobeko.confmanagement.ui.conferences.ConferencesFragment"
-        android:label="@string/title_conferences"
-        tools:layout="@layout/fragment_conferences" />
+    app:startDestination="@+id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.ntobeko.confmanagement.ui.approvals.ApprovalsFragment"
         android:label="@string/menu_approval"
         tools:layout="@layout/fragment_approvals" />
+
+    <fragment
+        android:id="@+id/nav_conferences"
+        android:name="com.ntobeko.confmanagement.ui.conferences.ConferencesFragment"
+        android:label="@string/title_conferences"
+        tools:layout="@layout/fragment_conferences" />
 
     <fragment
         android:id="@+id/nav_gallery"
