--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -57,4 +57,17 @@
         android:name="com.ntobeko.confmanagement.ui.rejected.RejectedFragment"
         android:label="@string/menu_approval"
         tools:layout="@layout/fragment_approvals" />
+    <!-- Attendence approval -->
+
+    <fragment
+        android:id="@+id/nav_attapproved"
+        android:name="com.ntobeko.confmanagement.ui.attApproved.AttApprovedFragment"
+        android:label="Attendence Approvals"
+        tools:layout="@layout/fragment_approvals" />
+    <fragment
+        android:id="@+id/nav_attrejected"
+        android:name="com.ntobeko.confmanagement.ui.attRejected.AttRejectedFragment"
+        android:label="Attendence Approvals"
+        tools:layout="@layout/fragment_approvals" />
+
 </navigation>
